# ChangeLog for media-libs/babl
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/babl/ChangeLog,v 1.17 2010/02/19 13:41:42 patrick Exp $

*babl-0.1.2 (19 Feb 2010)

  19 Feb 2010; Patrick Lauer <patrick@gentoo.org> +babl-0.1.2.ebuild:
  Bump for #305623

  20 Dec 2009; Brent Baude <ranger@gentoo.org> babl-0.0.22.ebuild:
  Marking babl-0.0.22 ppc64 for bug 293127

*babl-0.1.0 (01 Sep 2009)

  01 Sep 2009; Patrick Lauer <patrick@gentoo.org> +babl-0.1.0.ebuild,
  +files/babl-0.1.0-build-fixes.patch:
  Bump to 0.1.0, fixes half of #281264

  06 Jul 2009; Jeroen Roovers <jer@gentoo.org> babl-0.0.22.ebuild:
  Stable for HPPA (bug #258344).

  06 Apr 2009; Brent Baude <ranger@gentoo.org> babl-0.0.22.ebuild:
  Marking babl-0.0.22 ppc for bug 258344

  31 Mar 2009; Raúl Porcel <armin76@gentoo.org> babl-0.0.22.ebuild:
  ia64/sparc stable wrt #258344

  20 Mar 2009; Markus Meier <maekke@gentoo.org> babl-0.0.22.ebuild:
  amd64/x86 stable, bug #258344

  11 Mar 2009; Tobias Klausmann <klausman@gentoo.org> babl-0.0.22.ebuild:
  Stable on alpha, bug #258344

  31 Jan 2009; Matti Bickel <mabi@gentoo.org> babl-0.0.22.ebuild:
  added ~ppc for bug #240433

  28 Dec 2008; Raúl Porcel <armin76@gentoo.org> babl-0.0.22.ebuild:
  Add ~ia64 wrt #240433

  25 Dec 2008; Friedrich Oslage <bluebird@gentoo.org> babl-0.0.22.ebuild:
  Add ~sparc keyword, bug #240433

  11 Dec 2008; Tobias Klausmann <klausman@gentoo.org> babl-0.0.22.ebuild:
  Keyworded on alpha, bug #240433

  01 Dec 2008; Brent Baude <ranger@gentoo.org> babl-0.0.22.ebuild:
  Marking babl-0.0.22 ~ppc64 for bug 240433

  21 Nov 2008; Jeroen Roovers <jer@gentoo.org> babl-0.0.22.ebuild:
  Marked ~hppa (bug #240433).

*babl-0.0.22 (07 Oct 2008)

  07 Oct 2008; Hanno Boeck <hanno@gentoo.org> +metadata.xml,
  +babl-0.0.22.ebuild:
  Initial commit of babl library.
