@@ -3,8 +3,10 @@ AUX babl-0.1.0-build-fixes.patch 551 RMD160 787daf8d440fbb16a777e9fa07bac828bb98
 DIST babl-0.0.22.tar.bz2 396413 RMD160 a10c07e70f1fe8944a969bba46484acf410c2583 SHA1 9de50fb5833f41691f50f6e735d6422aad52ea94 SHA256 1a8437e714cf48bdfd24a3c1db218826eea5737514b99482014d93a8935b0f6d
 DIST babl-0.1.0.tar.bz2 406488 RMD160 7bf933eacd9654ea20e639394fc7481bc918f79b SHA1 6e95e24c48b8018fefbf8e69ad62f4a4de56640c SHA256 0cf017e31b73a898a1711103596a4d1593fa2b6c66d7368fcc6d7103d9bb8591
 DIST babl-0.1.2.tar.bz2 428971 RMD160 153b1f4a8745672a8364f12e1e1df46ed31ec3d3 SHA1 1abe98b11e67737b6f74d6993d45046eec93bcda SHA256 1de1394f3d49313bd99f2eab5ae7a4ddfd66d27cdaa89aede67b0dd96f43b722
+DIST babl-0.1.4.tar.bz2 423645 RMD160 8ef928258867945712ca2e1549acc90e4407f8fd SHA1 9f7186e5d968a4c9d81a63b20836b163f56df616 SHA256 5b36312528de84815f054345cd478743a9493981a44060013b682d0304ffe733
 EBUILD babl-0.0.22.ebuild 989 RMD160 8d995a28a4a178d1dab04f6907cd4b7727b246ac SHA1 6fbabb6d7819449abf4dfdf6cf306a55206f1c76 SHA256 aafc53907e05e87c12439882ad0df7f576cea04dd21e18c5d88879d8a5ddab98
 EBUILD babl-0.1.0.ebuild 988 RMD160 da65c6a7b7adcc38a79515791e22d2816a756353 SHA1 881c3d06462155f4678dc0c0957d690f6639c763 SHA256 4265cc5edfddbe8d3365dcf11fcfa91ad8118d8f4bc672cf2b9e70ede1e13f6f
 EBUILD babl-0.1.2.ebuild 780 RMD160 f93dae179804c8016fcce80da77ea39f0f44610c SHA1 0bbbd857373707fd56ec302ea1e87a21385d2216 SHA256 ec5e361877421e65d067ac88f94e0d6885dff94197373a6709acc929c9f63e9f
-MISC ChangeLog 1893 RMD160 d31660c93b8f403b074451a4e44d6353e57b0c74 SHA1 949d480ad5c846b1549b2e704a33eb30fe12bd77 SHA256 0e22101e797d8a993b721647dd49d5dec61aeb58a8863f02eb4458eb6ef1a7ca
+EBUILD babl-0.1.4.ebuild 759 RMD160 9205238db4ddb53676fb1b69ded541113de57a2b SHA1 068922f2ca50f3cea2ffddb2247bff2ce0fc0ee2 SHA256 c93a15d52f49de80ae6fea83408818f376aa8d20b40bc81a2abaa68b00473f59
+MISC ChangeLog 2001 RMD160 3576018c9ce58cad5c51ed13e800d2e19ce59264 SHA1 dfc2eea68449789c18c560b34968eeee8880a9a1 SHA256 d147e38e6fdbdd714a1cfb8ed0862c5527c33cb36b5e1e187602864b4ff1cb29
 MISC metadata.xml 220 RMD160 a49072631c03f8ac3685b12169abeef3b34ad3d6 SHA1 9614887db749b0a3c17016da5b3ec0e42b908ad3 SHA256 c893488c84e6da8039f2b473982f03e934ec12f8fe2c1ace770f9e34969db081
